# Graphmind

./: .env.example  .env.production.example  .gitignore  Makefile  PRODUCTION_SETUP.md  README.md  alembic.ini  pyproject.toml  upload_test.html
Docker/: docker-compose.yaml  service.Dockerfile  worker.Dockerfile
alembic/: env.py
alembic/versions/: 7f5ec533d015_files_metadata.py
src/app/: deps.py  main.py
src/app/celery/: __init__.py  worker.py
src/app/configs/: config.py
src/app/db/: alembic_runner.py  monitoring.py  session.py
src/app/db/crud/: files.py
src/app/db/models/: __init__.py  file_metadata.py
src/app/db/schemas/: __init__.py  file_metadata.py
src/app/db/services/: __init__.py  files.py
src/app/error_handling/: __init__.py  circuit_breaker.py  dead_letter_queue.py  graceful_degradation.py
src/app/health/: __init__.py  dependency_status.py
src/app/mcp/: README.md  data_managment.py  toolbox.py
src/app/routes/: error_handling.py  files.py  health.py
src/app/security/: __init__.py  file_validator.py  rate_limiter.py
src/app/services/: neo4j_driver.py  retrieval_query.py  template.py
src/app/storage/: __init__.py  azure.py  base.py  local.py  s3.py
