[project]
name = "custom-graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "azure-storage-blob>=12.25.1",
    "redis>=5.2.1",
    "boto3>=1.39.3",
    "celery[redis]>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.14",
    "hiredis>=3.2.1",
    "neo4j>=5.28.1",
    "neo4j-graphrag>=1.8.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "llama-index>=0.12.47",
    "llama-index-node-parser-slide>=0.1.0",
    "python-magic>=0.4.27",
]
